# flowfinder-native

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.trae/specs/code-audit-and-roadmap/: checklist.md  task-11-brief.md  tasks.md
FlowFinderNative/: Package.swift
FlowFinderNative/.build/: manifest.pif
FlowFinderNative/FlowFinderNative.xcodeproj/: project.pbxproj
FlowFinderNative/FlowFinderNative/App/: AppDelegate.swift  FlowFinderApp.swift
FlowFinderNative/FlowFinderNative/Bridge/: CoreBridge.swift  FFIFunctions.swift  SearchBridge.swift  TagBridge.swift  TaskSchedulerManager.swift  ThemeManager.swift  ThumbnailBridge.swift  ThumbnailManager.swift
FlowFinderNative/FlowFinderNative/Libraries/: libflowfinder_core.dylib
FlowFinderNative/FlowFinderNative/Model/: FileEntry.swift  FileEntryViewModel.swift  PaneState.swift  SidebarItem.swift  Tag.swift  TaskInfo.swift  VolumeInfo.swift
FlowFinderNative/FlowFinderNative/Resources/: Info.plist
FlowFinderNative/FlowFinderNative/UI/: BatchRenameWindowController.swift  ContentView.swift  DetailsBar.swift  FileGridView.swift  FileListView.swift  GlassSectionMaskView.swift  MainMenu.swift  MainWindowController.swift  PaneToolbar.swift  (+6 more)
docs/: MIGRATION_LOG.md  index.html
rust-core/: Cargo.toml
rust-core/include/: ff_ffi.h
rust-core/src/: lib.rs
rust-core/src/core/: bulk_read.rs  cow_copy.rs  dedup_engine.rs  dir_cache.rs  mod.rs  parallel_ops.rs  path_guard.rs  scanner.rs  settings.rs  sqlite_cache.rs  task_scheduler.rs  utils.rs  volumes.rs
rust-core/src/ffi/: mod.rs
scripts/: build-rust.sh
(+8 files in other folders)
