[package]
name = "flowfinder-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true

[dependencies]
libc = "0.2"
blake3 = "1.5"
walkdir = "2.5"
lru = "0.12"
parking_lot = "0.12"
log = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1.7"

[dev-dependencies]
tempfile = "3.10"
